iowow (1.2.12) testing; urgency=medium

  * Added iwu_file_read_as_buf() (iwutils.h)
  * Optimized cmake config files generation

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 21 Jun 2018 23:01:44 +0700

iowow (1.2.11) testing; urgency=medium
  * iwpool refactoring fixed pool memory corruption (iwpool.h)
  * Fixed set terminating `\0` in iwpool_strdup() (iwpool.h)
  * Fixed wrong `if` in iwpool_calloc() (iwpool.h)

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 15 Jun 2018 17:58:20 +0700

iowow (1.2.10) testing; urgency=medium

  * Added iwpool_calloc() (iwpool.h)
  * Added iwpool_strdup(), iwpool_strndup() (iwpool.h)
  * Fixed memory leak in iwpool_destroy() (iwpool.h)
  * Renamed platform/linux/linux.c to platform/unix/unix.c (#9)
  * Added iwu_replace_char() (iwutils.h)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 11 Jun 2018 23:00:21 +0700

iowow (1.2.9) testing; urgency=medium

  * Rewrite of iwftoa() (iwconv.h)
  * Fixed typo: iwtoa renamed to iwitoa (iwconv.h)
  * Added iwu_cmp_files (iwutils.h)
  * Return type of iwxstr_ptr() changed to char* (iwxstr.h)

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 29 May 2018 01:01:56 +0700

iowow (1.2.8) testing; urgency=medium

  * IOWOW Ported to MIPS32 (big-endian) tested on Debian GNU/Linux 9.4

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 19 May 2018 21:09:04 +0700

iowow (1.2.7) testing; urgency=medium

  * Fixed incorrect exclusive locking in iwkv_del()"

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 17 May 2018 11:27:58 +0700

iowow (1.2.6) testing; urgency=medium

  * Fixed: database file is not created automatically if no open modes specified in opts

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 16 May 2018 19:57:35 +0700

iowow (1.2.5) testing; urgency=medium

  * Added iwkv_opflags opflags into iwkv_del

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 16 May 2018 19:33:16 +0700

iowow (1.2.4) testing; urgency=medium

  * Fixed race conditions in iwkv_cursor_to()
